# vade-runtime

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/output-styles/: coo.md
.github/: PULL_REQUEST_TEMPLATE.md  sync.yml
.github/ISSUE_TEMPLATE/: epic.yml  skill.yml  task.yml
.github/workflows/: auto-add-prs-to-project-reusable.yml  auto-add-prs-to-project.yml  auto-merge-sync-pr-reusable.yml  auto-tag-issues-reusable.yml  auto-tag-issues.yml  bootstrap-regression.yml  bridge-form-fields-to-natives.yml  bridge-form-fields-trigger.yml  coo-on-assign-reusable.yml  coo-on-assign.yml  (+5 more)
scripts/: README.md  aggregator.yml  bash-github-api-guard.sh  bootstrap.sh  bridge-form-fields-to-natives.py  check-pat-freshness.sh  cloud-setup.sh  coo-bootstrap.sh  coo-identity-digest.sh  coo-session-url.sh  discussions-digest.sh  gh-app-token.sh  gh-coo-wrap.sh  gh-pr-create.sh  git-push-coo.sh  git-push-with-fallback.sh  git-shim.sh  healthcheck.sh  hooks-dispatch.sh  integrity-check-e6-r2-absence.py  integrity-check.sh  issue-comments.sh  local-setup.sh  mem0-mcp-projection.py  memo-index.sh  persist-permissions.sh  project-board-digest.sh  registry-check.sh  session-end-transcript-export.py  session-end-transcript-export.sh  session-idle-watchdog.sh  session-lifecycle.sh  session-start-sync.sh  strip-bash-xtrace.sh  subscribe-discussion.sh  subscribe-pr-mergeable.sh  subscribe-pr-watch.sh  subscribe-vade-coo-notifications.sh  sync-repos.sh  sync-templates-to-consumers.sh  (+3 more)
snippets/: events-dump.js
tests/: pr-review-event-canary.md
(+69 files in other folders)
