[project]
name = "coo-harness-lib"
version = "0.1.0"
description = "Internal libraries for the VADE COO harness. Not published."
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34,<2",
    "pydantic>=2.6,<3",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "boto3-stubs[s3]>=1.34",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["lib"]
include = ["transcripts*"]

[tool.setuptools.package-data]
transcripts = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", "F", "W",     # pycodestyle + pyflakes
    "I",                # isort
    "B",                # bugbear
    "UP",               # pyupgrade
    "SIM",              # simplify
    "PL",               # pylint
    "RUF",              # ruff-specific
]
ignore = [
    "PLR0913",          # too-many-arguments — boundary types fail this routinely
]

[tool.ruff.lint.per-file-ignores]
"lib/transcripts/tests/*" = ["PLR2004"]  # magic-value checks fire constantly in tests

[tool.mypy]
python_version = "3.10"
strict = true
files = ["lib/transcripts"]

[[tool.mypy.overrides]]
module = "transcripts.tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["lib/transcripts/tests"]
pythonpath = ["lib"]
addopts = "--cov=lib/transcripts --cov-report=term-missing --cov-fail-under=80"
